# src-highlite

./: .cdtproject  .cproject  .cvsignore  .gitignore  .project  AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  NOTES.txt  README  README.GIT  README.cvs  THANKS  TODO.txt  _sstream  acinclude.m4  configure.ac  defines.pri  jenkins-build.sh  my-TODO.txt  source-highlight-bash-completion  source-highlight.pc.in  source-highlight.pro  source-highlight.spec.in  sourcehighlight.kdevelop  src-highlite.directive  src-highlite.directive.in  txtc.sh.in
build-aux/: .gitignore
completion/: source-highlight
doc/: .cvsignore  .gitignore  Makefile.am  check-regexp.1  comment-show.lang  comment-show2.lang  css_example.css  example-c.diff  example-n.diff  example-u.diff  flex_scanner.ll  footer.html  gen_style_example.sh.in  header.html  help-output.texinfo  highlight_type.style  index.html  instances_example.cpp  sh_acid.css  sh_berries-dark.css  sh_berries-light.css  sh_bipolar.css  sh_blacknblue.css  sh_bright.css  sh_contrast.css  sh_darkblue.css  sh_darkness.css  sh_desert.css  sh_dull.css  sh_easter.css  sh_emacs.css  sh_golden.css  sh_greenlcd.css  sh_ide-anjuta.css  sh_ide-codewarrior.css  sh_ide-devcpp.css  sh_ide-eclipse.css  sh_ide-kdev.css  sh_ide-msvcpp.css  sh_kwrite.css  (+33 more)
gl/: .cvsignore  Makefile.am  getopt_.h  memset.c  stdlib.h  strdup.h  string.h  unistd.h
lib/compat/: Makefile.am  compat_dirent.cpp  compat_dirent.h  getopt.c  getopt1.c  unistd.h
lib/examples/: .cvsignore  Makefile.am  infoformatter-main.cpp  source-highlight-console-main.cpp  styleformatter-main.cpp
lib/srchilite/: .cvsignore  Makefile.am  bufferedoutput.cpp  chartranslator.cc  chartranslator.h  colors.h  copyright.c  copyright.h  copyright.text  ctagscollector.cpp  ctagscollector.h  ctagsformatter.cpp  ctagsformatter.h  ctagsmanager.cpp  ctagsmanager.h  debuglistener.cpp  debuglistener.h  delimitedlangelem.cpp  delimitedlangelem.h  docgenerator.cc  docgenerator.h  doctemplate.cpp  doctemplate.h  eventgenerator.h  fileinfo.cpp  fileinfo.h  fileutil.cc  fileutil.h  formatter.cpp  formatter.h  formattermanager.cpp  formattermanager.h  highlightbuilderexception.cpp  highlightbuilderexception.h  highlightevent.h  highlighteventlistener.h  highlightrule.cpp  highlightrule.h  highlightrulefactory.cpp  highlightrulefactory.h  (+105 more)
lib/tests/: .cvsignore  Makefile.am  asserttestexit.h  logformatter.cpp  logformatter.h  source-highlight.conf  stdboosterror.h  test.map  test_buffered_output_main.cpp  test_ctagscollector_main.cpp  test_ctagsformatter_main.cpp  test_ctagsmanager_main.cpp  test_debuglistener_main.cpp  test_events_main.cpp  test_exception_main.cpp  test_filenotfound_main.cpp  test_formatreferences_main.cpp  test_formatter_manager_main.cpp  test_highlightbuilder_main.cpp  test_highlighter_main.cpp  test_instances_main.cpp  test_langdefmanager_main.cpp  test_langinfer_main.cpp  test_langmap_main.cpp  test_linenum_main.cpp  test_lineranges_main.cpp  test_outlang_errors_main.cpp  test_outlangparser_main.cpp  test_regexpreprocessor_main.cpp  test_regexranges_main.cpp  test_regexrules_main.cpp  test_settings_main.cpp  test_sourcefilehighlighter_main.cpp  test_sourcehighlight_errors_main.cpp  test_sourcehighlight_main.cpp  test_style_errors_main.cpp  test_textgenerator_main.cpp  test_textstyle_main.cpp  test_textstyleformatter_main.cpp  test_textstyleformatterfactory_main.cpp  (+3 more)
src/: .cvsignore  Makefile.am  asserttest.h  c.lang  c_comment.lang  changelog.lang  check-regexp.cpp  check-regexp_cmd.c  check-regexp_cmd.ggo  check-regexp_cmd.h  cmdline.c  cmdline.ggo  cmdline.h  cmdlineargs.h  cpp.lang  cpp2html.in  csharp.lang  css_common.outlang  default.css  default.style  desktop.lang  docbook.outlang  docbookdoc.outlang  envmapper.c  envmapper.h  erlang.lang  esc.style  esc256.style  fortran.lang  function.lang  glsl.lang  haskell_literate.lang  html.lang  html.outlang  html_common.outlang  html_notfixed.outlang  htmlcss.outlang  htmldoc.outlang  java.lang  java2html.in  (+56 more)
src/lib/: .cvsignore  Makefile.am  bufferedoutput.cpp  bufferedoutput.h  chartranslator.cc  chartranslator.h  cmdline.c  cmdline.ggo  cmdline.h  colormap.h  copyright.text  ctagscollector.h  debuglistener.cpp  debuglistener.h  delimitedlangelem.cpp  delimitedlangelem.h  docgenerator.cc  docgenerator.h  doctemplate.cpp  doctemplate.h  envmapper.h  fileinfo.cpp  fileinfo.h  fileutil.cc  fileutil.h  formattermanager.cpp  formatterparams.h  generatorfactory.cc  generatorfactory.h  generatormap.cpp  generatormap.h  globalostream.h  highlightbuilderexception.cpp  highlightevent.h  highlightrule.h  highlightrulefactory.cpp  highlightstate.cpp  highlightstate.h  highlightstatebuilder.cpp  highlightstatebuilder.h  (+129 more)
src/lib/tests/: .cvsignore  Makefile.am  logformatter.h  test_ctagscollector_main.cpp  test_ctagsformatter_main.cpp  test_ctagsmanager_main.cpp  test_debuglistener_main.cpp  test_exception_main.cpp  test_filenotfound_main.cpp  test_formatreferences_main.cpp  test_formatter_manager_main.cpp  test_highlighter_main.cpp  test_langdefmanager_main.cpp  test_langinfer_main.cpp  test_lineranges_main.cpp  test_outlangparser_main.cpp  test_regexrules_main.cpp  test_sourcefilehighlighter_main.cpp  test_sourcehighlight_errors_main.cpp  test_sourcehighlight_main.cpp  test_style_errors_main.cpp  test_textstyleformatterfactory_main.cpp  test_wordtokenizer_main.cpp  valgrind_test.sh.in
tests/: .cvsignore  Makefile.am  access.log.html  auth.log.html  c.lang.html  c_comment.show  changelog.css  cpp.lang.html  cpp.langelems  debug.debug  debug.java  debug.java.html  default.style.html  erasedir.sed  erasedir2.sed  erasedir3.sed  erasedir_inputlang.sed  error.log.html  footer.html  header.html  lang.list  lang.map  lang4defaults.lang  log.lang.html  missing_extension.err  missing_langmap.err  missing_langmap2.err  namedgroups.lang  namedgroups_state.lang  namedgroups_state.show  outlang.list  simple.lang  simple.outlang  suppressions.supp  syslog.log.html  syslog.style  test.MF  test.MF.html  test.adb  test.adb.html  (+284 more)
tests/output_dir/: .cvsignore  Makefile.am
(+11 files in other folders)
