# Copyright (C) 1999, 2000, 2001 Lorenzo Bettini <http://www.lorenzobettini.it>
#
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without
# modifications, as long as this notice is preserved.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

SUBDIRS = gl src doc tests

EXTRA_DIST = \
	source-highlight.spec.in \
	source-highlight.spec \
	autogen.sh \
	TODO.txt \
	CREDITS gl/m4/gnulib-cache.m4

source_highlightdoc_DATA = \
	ChangeLog \
	COPYING \
	NEWS \
	THANKS \
	INSTALL \
	README \
	TODO.txt \
	CREDITS

ACLOCAL_AMFLAGS = -I gl/m4